# loader_template

./: README.md  cookiecutter.json
{{ cookiecutter.dated }}/: extract.py  load.py  process_{{ cookiecutter.etl_name }}.py  transform.py
{{ cookiecutter.dated }}/conf/: field_reference.json
{{ cookiecutter.slug }}/: .gitignore  config.toml  load_{{ cookiecutter.slug }}.py  logging_config.json  metadata.toml  pyproject.toml
